--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,123 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+@layer utilities {
+  .wordSpacing {
+    word-spacing: 0.5px;
   }
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+/*========================== Global =========================*/
+/*==========================================================*/
+.mylabel {
+  @apply font-bold mb-1;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+/*========================== --Util =============================*/
+/*===============================================================*/
+
+/*------------------------- FormHeader -------------------------*/
+.header_bg {
+  @apply pb-10 pt-24;
+}
+.header_icon {
+  @apply ml-6 md:ml-32 text-2xl cursor-pointer;
+}
+.header_text {
+  @apply text-lg md:text-xl font-bold mb-3 lg:mb-10 flex justify-center;
+}
+/*------------------------- Grid -------------------------*/
+.left_text_right_pic {
+  @apply grid md:grid-cols-2 my-16 items-center scroll-mt-24;
+}
+.left_right_text_bg {
+  @apply row-start-2 md:col-start-1 md:row-start-1 px-8 text-center space-y-3 lg:w-3/4 w-4/5 mx-auto flex flex-col font-semibold;
+}
+.grid_header_text {
+  @apply font-bold text-3xl md:text-5xl;
+}
+.left_right_pic_bg {
+  @apply px-8 row-start-1 md:col-start-2;
+}
+.grid_pic {
+  @apply relative h-[55vh]  w-[10/12] lg:w-[w-7/12] flex mx-auto rounded-md;
+}
+.right_text_left_pic {
+  @apply grid md:grid-cols-2 my-16 items-center space-y-10 md:space-y-0 scroll-mt-24;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.right_left_text_bg {
+  @apply px-8 text-center space-y-3  lg:w-3/4 w-4/5 mx-auto flex flex-col font-semibold;
+}
+/*------------------------- NoCampaignMessage -------------------------*/
+.no_campagin_image_bg {
+  @apply relative h-60 w-60 mx-auto rounded-2xl;
+}
+.no_campaign_message_text {
+  @apply my-4 font-semibold  px-10 text-center;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+/*========================== Campaign ===========================*/
+/*===============================================================*/
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+/*------------------------- AllCampaign -------------------------*/
+.all_campaign_bg {
+  @apply w-full h-60 rounded-md relative hover:scale-105 transition-all duration-700;
+}
+.all_campaign_overlay {
+  @apply absolute bg-gradient-to-t from-black to-transparent rounded-md h-full w-full top-0 left-0 bottom-0 right-0 z-10 opacity-70 flex flex-col;
+}
+.all_campaign_icons_bg {
+  @apply w-10/12 mx-auto right-0 left-0 rounded-full z-10 flex top-4 text-2xl text-white absolute justify-between;
+}
+.all_campaign_text_bg {
+  @apply text-white bottom-4 left-4 w-3/4 z-10 absolute;
+}
+.all_campaign_name {
+  @apply truncate  font-bold text-sm;
+}
+.all_campaign_details {
+  @apply flex flex-col text-xs font-semibold;
+}
+.all_campaign_budget {
+  @apply flex space-x-6 flex-row;
+}
+/*------------------------- CampaignForm -------------------------*/
+.campaign_form_bg {
+  @apply grid lg:grid-cols-2 space-y-8 lg:space-y-0 items-center;
+}
+.campaign_form_img_bg {
+  @apply h-80 relative rounded-md border flex items-center mx-auto place-content-center  border-gray-400 flex-col font-bold w-11/12 md:w-80;
+}
+.campaign_form_img {
+  @apply absolute top-0 bottom-0 left-0 right-0  z-10 h-full rounded-md;
+}
+.campaign_form_input {
+  @apply rounded-full h-full opacity-0;
+}
+.campaign_form_form_bg {
+  @apply flex flex-col  gap-y-3 md:w-9/12 lg:mr-auto w-11/12 mx-auto;
+}
+.campaign_form_form_input {
+  @apply rounded-sm w-full;
+}
+.campaign_form_button_bg {
+  @apply flex justify-between w-10/12 mr-auto;
+}
+.campaign_form_preview_button {
+  @apply w-24 px-4 py-2 text-gray-50 flex m-2 ring-1 rounded-sm font-bold bg-primary-500  hover:bg-primary-400 focus:bg-primary-400;
+}
+.campaign_form_submit_button {
+  @apply w-24 px-4 py-2 text-gray-50 flex m-2 ring-1 rounded-sm font-bold bg-green-500  hover:bg-green-400 focus:bg-green-400;
+}
+.submit_button_spinner {
+  @apply border h-6 w-6 border-b-0 rounded-full animate-spin duration-100 mx-auto;
+}
+.campaign_form_dollar {
+  @apply absolute top-[37px] left-2;
+}
+/*------------------------- PreviewComponent -------------------------*/
+.preview_component_overlay {
+  @apply bg-black opacity-60 select-none top-0 bottom-0 w-full min-h-screen  absolute z-20;
 }
