--- a/components/Helper/00Helper.css
+++ b/components/Helper/00Helper.css
@@ -22,7 +22,7 @@
   @apply font-bold lg:text-2xl;
 }
 .banner_header {
-  @apply font-bold  text-2xl md:text-4xl lg:text-7xl;
+  @apply font-bold  text-2xl md:text-4xl lg:text-7xl font-rubikVinyl;
 }
 /*------------------------- Footer -------------------------*/
 .footer_first_bg {
@@ -35,7 +35,7 @@
   @apply grid md:grid-cols-3 text-gray-50 font-semibold gap-y-8;
 }
 .footer_logo_bg {
-  @apply flex  border-2  justify-center  text-3xl lg:text-4xl h-16 w-16 bg-gray-50 text-gray-700 rounded-full items-center;
+  @apply flex  border-2  justify-center  text-3xl lg:text-4xl h-16 w-16 bg-gray-50 text-gray-700 rounded-full items-center font-rubikVinyl;
 }
 .footer_link_list {
   @apply font-medium flex flex-col;
@@ -60,7 +60,7 @@
 }
 /*------------------------- Layout -------------------------*/
 .layout_bg {
-  @apply text-gray-800  min-h-screen  overflow-hidden bottom-0 relative;
+  @apply text-gray-800  min-h-screen  overflow-hidden bottom-0 relative font-openSans;
 }
 /*------------------------- Navbar -------------------------*/
 .navbar_bg {
@@ -73,7 +73,7 @@
   @apply fixed z-10 inline-flex items-center justify-between h-[8vh] lg:h-[9vh] top-0  bg-black bg-opacity-30  w-full left-0  md:py-4 py-3  sm:px-5 md:px-10 lg:px-24 backdrop-blur-sm;
 }
 .navbar_logo {
-  @apply blur-0  flex flex-1  items-center justify-center sm:justify-start text-2xl lg:text-4xl;
+  @apply blur-0  flex flex-1  items-center justify-center sm:justify-start text-2xl lg:text-4xl font-rubikVinyl;
 }
 .navbar_buttons_bg {
   @apply items-center lg:text-lg space-x-3 md:text-base md:space-x-4 text-sm transition-all;
