--- a/components/02Helper/00Helper.css
+++ b/components/02Helper/00Helper.css
@@ -22,7 +22,7 @@
   @apply font-bold lg:text-2xl;
 }
 .banner_header {
-  @apply font-bold  text-2xl md:text-4xl lg:text-7xl font-rubikVinyl;
+  @apply font-bold text-2xl md:text-4xl lg:text-7xl font-rubikVinyl;
 }
 /*------------------------- Footer -------------------------*/
 .footer_first_bg {
@@ -73,7 +73,7 @@
   @apply fixed z-10 inline-flex items-center justify-between h-[8vh] lg:h-[9vh] top-0  bg-black bg-opacity-30  w-full left-0  md:py-4 py-3  sm:px-5 md:px-10 lg:px-24 backdrop-blur-sm;
 }
 .navbar_logo {
-  @apply blur-0  flex flex-1  items-center justify-center sm:justify-start text-2xl lg:text-4xl font-rubikVinyl;
+  @apply blur-0 font-rubikVinyl flex flex-1 items-center justify-center sm:justify-start text-2xl lg:text-4xl;
 }
 .navbar_buttons_bg {
   @apply items-center lg:text-lg space-x-3 md:text-base md:space-x-4 text-sm transition-all;
