--- a/components/Campaigns/00Campaigns.css
+++ b/components/Campaigns/00Campaigns.css
@@ -19,7 +19,7 @@
   @apply truncate  font-bold text-sm;
 }
 .all_campaign_details {
-  @apply flex flex-col text-xs font-semibold;
+  @apply flex flex-col text-xs gap-1;
 }
 .all_campaign_budget {
   @apply flex space-x-6 flex-row;
@@ -29,6 +29,10 @@
 }
 .all_campaign_grid {
   @apply grid lg:grid-cols-4 md:grid-cols-3 w-11/12 gap-4 mx-auto;
+}
+
+.detail_title {
+  @apply font-semibold;
 }
 
 /*------------------------- CampaignForm -------------------------*/
@@ -45,25 +49,25 @@
   @apply rounded-full h-full opacity-0;
 }
 .campaign_form_form_bg {
-  @apply flex flex-col  gap-y-3 md:w-9/12 lg:mr-auto w-11/12 mx-auto;
+  @apply grid grid-cols-2 gap-3 gap-y-0 md:w-9/12 lg:mr-auto w-11/12 mx-auto;
 }
 .campaign_form_form_input {
   @apply rounded-sm w-full;
 }
 .campaign_form_button_bg {
-  @apply flex justify-between w-10/12 mr-auto;
+  @apply col-span-2 flex justify-between w-full mr-auto mt-1;
 }
 .campaign_form_preview_button {
-  @apply w-24 px-4 py-2 text-gray-50 flex m-2 ring-1 ring-gray-400 rounded-sm font-bold !bg-primary-500  hover:!bg-primary-400 focus:!bg-primary-400;
+  @apply w-24 px-4 py-2 text-gray-50 flex  ring-1 ring-gray-400 rounded-sm font-semibold !bg-primary-500  hover:!bg-primary-400 focus:!bg-primary-400;
 }
 .campaign_form_submit_button {
-  @apply w-24 px-4 py-2 text-gray-50 flex m-2 ring-1 ring-gray-400 rounded-sm font-bold !bg-green-500  hover:!bg-green-400 focus:!bg-green-400;
+  @apply w-24 px-4 py-2 text-gray-50 flex ring-1 ring-gray-400 rounded-sm font-semibold !bg-green-500  hover:!bg-green-400 focus:!bg-green-400;
 }
 .submit_button_spinner {
   @apply border h-6 w-6 border-b-0 rounded-full animate-spin duration-100 mx-auto;
 }
 .campaign_form_dollar {
-  @apply absolute top-[37px] left-2;
+  @apply absolute top-[36%] left-2;
 }
 /*------------------------- PreviewComponent -------------------------*/
 .preview_component_bg {
